WoD Pops, Pops Scrollbar in Province Window, Werewolf Icons, Mage Icons

--- a/ancientblood/localization/english/AB_cultures_l_english.yml
+++ b/ancientblood/localization/english/AB_cultures_l_english.yml
@@ -17,18 +17,19 @@
  salubriculture:0 "Salubri"
  tzimisceculture:0 "Tzimisce"
  enochculture:0 "Enoch"
+ werewolfculture:0 "Werewolfen"
  blackfuryculture:0 "Black Fury"
  bonegnawerculture:0 "Bonegnawer"
  fiannaculture:0 "Fianna"
  getoffenrisculture:0 "Get of Fenris"
- childrenofgaiaculture:0 "Children of Gaia"
+ childofgaiaculture:0 "Children of Gaia"
  redtalonculture:0 "Red Talon"
  silentstriderculture:0 "Silent Strider"
  silverfangculture:0 "Silver Fang"
  shadowlordculture:0 "Shadow Lord"
- wardersculture:0 "Warders of Men"
+ warderculture:0 "Warders of Men"
  whitehowlerculture:0 "White Howler"
- blackspiraldancerculture:0 "Black Spiral Dancer"
+ #blackspiraldancerculture:0 "Black Spiral Dancer"
  
  #Naming
  vampireculture_malename:0 "$NAME_MALE$ $NICKNAME$"
@@ -71,16 +72,18 @@
  fiannaculture_femalename:0 "$NAME_FEMALE$ $FAMILY_MALE$ $NICKNAME$"
  getoffenrisculture_malename:0 "$NAME_MALE$ $FAMILY_MALE$ $NICKNAME$"
  getoffenrisculture_femalename:0 "$NAME_FEMALE$ $FAMILY_MALE$ $NICKNAME$"
- childrenofgaiaculture_malename:0 "$NAME_MALE$ $FAMILY_MALE$ $NICKNAME$"
- childrenofgaiaculture_femalename:0 "$NAME_FEMALE$ $FAMILY_MALE$ $NICKNAME$"
+ childofgaiaculture_malename:0 "$NAME_MALE$ $FAMILY_MALE$ $NICKNAME$"
+ childofgaiaculture_femalename:0 "$NAME_FEMALE$ $FAMILY_MALE$ $NICKNAME$"
  redtalonculture_malename:0 "$NAME_MALE$ $FAMILY_MALE$ $NICKNAME$"
  redtalonculture_femalename:0 "$NAME_FEMALE$ $FAMILY_MALE$ $NICKNAME$"
  silentstriderculture_malename:0 "$NAME_MALE$ $FAMILY_MALE$ $NICKNAME$"
  silentstriderculture_femalename:0 "$NAME_FEMALE$ $FAMILY_MALE$ $NICKNAME$"
- silverfangculture_malename:0 "$NAME_MALE$ $FAMILY_MALE$ $NICKNAME$"
- silverfangculture_femalename:0 "$NAME_FEMALE$ $FAMILY_MALE$ $NICKNAME$"
  shadowlordculture_malename:0 "$NAME_MALE$ $FAMILY_MALE$ $NICKNAME$"
  shadowlordculture_femalename:0 "$NAME_FEMALE$ $FAMILY_MALE$ $NICKNAME$"
  warderculture_malename:0 "$NAME_MALE$ $FAMILY_MALE$ $NICKNAME$"
  warderculture_femalename:0 "$NAME_FEMALE$ $FAMILY_MALE$ $NICKNAME$"
+ werewolfculture_malename:0 "$NAME_MALE$ $NICKNAME$"
+ werewolfculture_femalename:0 "$NAME_FEMALE$ $NICKNAME$"  
+ silverfangculture_malename:0 "$NAME_MALE$ $FAMILY_MALE$ $NICKNAME$"
+ silverfangculture_femalename:0 "$NAME_FEMALE$ $FAMILY_MALE$ $NICKNAME$" 
  
