--- a/ancientblood/localization/english/AB_traits_l_english.yml
+++ b/ancientblood/localization/english/AB_traits_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
  vampire:0 "Vampire"
- vampire_desc:0 "One of the Kindred.  Undead"
+ vampire_desc:0 "One of the Kindred.  Undead."
  vampire_tooltip:0 "This option is available because your ruler is a #Y Vampire#!."
  brujah:0 "Brujah"
  brujah_desc:0 "The get of Troile, concentrated in Carthage."
@@ -41,3 +41,13 @@
  torpor:0 "Torpor"
  torpor_desc:0 "The long sleep of the undead. One night, they may awaken."
  torpor_tooltip:0 "This option is available because your ruler is in #Y torpor#!."
+ werewolf:0 "Werewolf"
+ werewolf_desc:0 "One fo the Garou. Shapeshifters that transform into wolves and the dreaded "Crinos" form-half man/half wolf but more dangerous than either."
+ auspicetheurge:0 "Auspice: Theurge"
+ auspicetheurge_desc:0 "Theurge is one of the five Auspices under which a Garou may be born. The sickle-shaped crescent moon grants the gift of insight. The Theurges are the mystics of the Garou, closer than any to the Umbra and its denizens."
+ silverfang:0 "Silver Fang"
+ silverfang_desc:0 "The 'Alpha Tribe' of the Garou Nation, the Silver Fangs are traditional rulers and war leaders. These noble Garou are known for their physical beauty, courage, and honor. Sadly, many younger members of the tribe suffer from odd quirks -- absent-mindedness, mild hallucinations, somnambulism -- nothing overtly psychotic, but noticeable nevertheless. The powerful history of the tribe lays a heavy burden on the shoulders of its members, and many are too proud to ask for help. The plight of the Silver Fangs epitomizes the tragedy of the Garou in general. Although proud and outwardly strong, the Fangs suffer from diseases of the spirit and mind."
+ mage:0 "Mage"
+ mage_desc:0 "One of the Awakened. An Avtar of Magick!"
+ aeduna:0 "Aeduna"
+ aeduna_desc:0 "The Aeduna were the heirs of the Wyck, literally and figuratively, and wielded some of their skill in Awakened magic. But whereas the Wyck had been outsiders and travelers, the Aeduna were born among and lived with humans as healers, scribes, priests and priestesses, philosophers, and scholars. They grew in power and prominence Across the Mediterranean, spreading over time throughout Europe and parts of Asia. Many figures of myth are claimed to have been Aeduna, such Circe, Lilith, Medea, Merlin, Morgan le Fay, and perhaps some of the ancient gods."
