--- a/ancientblood/localization/english/AB_text_l_english.yml
+++ b/ancientblood/localization/english/AB_text_l_english.yml
@@ -2,3 +2,7 @@
  ######RELIGIONS######:0 ""
  vampire_sect:0 "Blood Gods"
  desc_vampire_sect:0 "Blood for the Blood Gods!  This is the religion of kindred of the kine who worship them."
+ gaian_religion:0 "Gaia"
+ desc_gaian_religion:0 "Werewolves and their Kinfolk worship Gaia through a variety of spirits, including the goddess Luna."
+ aeduna_tradition:0 "Aeduna"
+ aeduna_tradition_desc:0 "The Aeduna were the heirs of the Wyck, literally and figuratively, and wielded some of their skill in Awakened magic. But whereas the Wyck had been outsiders and travelers, the Aeduna were born among and lived with humans as healers, scribes, priests and priestesses, philosophers, and scholars. They grew in power and prominence Across the Mediterranean, spreading over time throughout Europe and parts of Asia. Many figures of myth are claimed to have been Aeduna, such Circe, Lilith, Medea, Merlin, Morgan le Fay, and perhaps some of the ancient gods."
