--- a/ancientblood/localization/english/AB_cultures_l_english.yml
+++ b/ancientblood/localization/english/AB_cultures_l_english.yml
@@ -1,6 +1,9 @@
 ﻿l_english:
  #GROUPS
  vampireculture:0 "Vampiric"
+ werewolfculture:0 "Werewolf"
+ mageculture:0 "Magick"
+ demonculture:0 "Demonic"
  #Vampiric
  ventrueculture:0 "Ventrue"
  brujahculture:0 "Brujah"
@@ -17,20 +20,41 @@
  salubriculture:0 "Salubri"
  tzimisceculture:0 "Tzimisce"
  enochculture:0 "Enoch"
- werewolfculture:0 "Werewolfen"
+#Werewolves
  blackfuryculture:0 "Black Fury"
  bonegnawerculture:0 "Bonegnawer"
  fiannaculture:0 "Fianna"
  getoffenrisculture:0 "Get of Fenris"
- childofgaiaculture:0 "Children of Gaia"
+ childrenofgaiaculture:0 "Children of Gaia"
  redtalonculture:0 "Red Talon"
  silentstriderculture:0 "Silent Strider"
  silverfangculture:0 "Silver Fang"
  shadowlordculture:0 "Shadow Lord"
- warderculture:0 "Warders of Men"
+ wardersculture:0 "Warders of Men"
  whitehowlerculture:0 "White Howler"
- #blackspiraldancerculture:0 "Black Spiral Dancer"
- 
+ blackspiraldancerculture:0 "Black Spiral Dancer"
+ #Mages
+ ahlibatinculture:0 "Ahl-I-Batin"
+ akashayanaculture:0 "Akashayana"
+ chakravanticulture:0 "Chakravanti"
+ euthanatosculture:0 "Euthanatos"
+ celestialsingersculture:0 "Celestial Singers"
+ dreamspeakerculture:0 "Dreamspeakers"
+ cultofmercuryculture:0 "Cult of Mercury"
+ sahajiyaculture:0 "Sahajiya"
+ daedelanculture:0 "Daedelans"
+ verbenaculture:0 "Verbena"
+ nephandiculture:0 "Nephandi"
+ taftaniculture:0 "Taftani"
+ sisterofhippolytaculture:0 "Sisters of Hippolyta"
+ hemkasobkculture:0 "Hem-Ka Sobk"
+ #Demons
+ ebonlegionculture:0 "Ebon Legion"
+ crimsomlegionculture:0 "Crimsom Legion"
+ silverlegionculture:0 "Silver Legion"
+ ironlegionculture:0 "Iron Legion"
+ alabasterlegionculture:0 "Alabaster Legion"
+
  #Naming
  vampireculture_malename:0 "$NAME_MALE$ $NICKNAME$"
  vampireculture_femalename:0 "$NAME_FEMALE$ $NICKNAME$" 
@@ -72,18 +96,60 @@
  fiannaculture_femalename:0 "$NAME_FEMALE$ $FAMILY_MALE$ $NICKNAME$"
  getoffenrisculture_malename:0 "$NAME_MALE$ $FAMILY_MALE$ $NICKNAME$"
  getoffenrisculture_femalename:0 "$NAME_FEMALE$ $FAMILY_MALE$ $NICKNAME$"
- childofgaiaculture_malename:0 "$NAME_MALE$ $FAMILY_MALE$ $NICKNAME$"
- childofgaiaculture_femalename:0 "$NAME_FEMALE$ $FAMILY_MALE$ $NICKNAME$"
+ childrenofgaiaculture_malename:0 "$NAME_MALE$ $FAMILY_MALE$ $NICKNAME$"
+ childrenofgaiaculture_femalename:0 "$NAME_FEMALE$ $FAMILY_MALE$ $NICKNAME$"
  redtalonculture_malename:0 "$NAME_MALE$ $FAMILY_MALE$ $NICKNAME$"
  redtalonculture_femalename:0 "$NAME_FEMALE$ $FAMILY_MALE$ $NICKNAME$"
  silentstriderculture_malename:0 "$NAME_MALE$ $FAMILY_MALE$ $NICKNAME$"
  silentstriderculture_femalename:0 "$NAME_FEMALE$ $FAMILY_MALE$ $NICKNAME$"
+ silverfangculture_malename:0 "$NAME_MALE$ $FAMILY_MALE$ $NICKNAME$"
+ silverfangculture_femalename:0 "$NAME_FEMALE$ $FAMILY_MALE$ $NICKNAME$"
  shadowlordculture_malename:0 "$NAME_MALE$ $FAMILY_MALE$ $NICKNAME$"
  shadowlordculture_femalename:0 "$NAME_FEMALE$ $FAMILY_MALE$ $NICKNAME$"
  warderculture_malename:0 "$NAME_MALE$ $FAMILY_MALE$ $NICKNAME$"
  warderculture_femalename:0 "$NAME_FEMALE$ $FAMILY_MALE$ $NICKNAME$"
- werewolfculture_malename:0 "$NAME_MALE$ $NICKNAME$"
- werewolfculture_femalename:0 "$NAME_FEMALE$ $NICKNAME$"  
- silverfangculture_malename:0 "$NAME_MALE$ $FAMILY_MALE$ $NICKNAME$"
- silverfangculture_femalename:0 "$NAME_FEMALE$ $FAMILY_MALE$ $NICKNAME$" 
- 
+ werewolfculture_malename:0 "$NAME_MALE$ $FAMILY_MALE$ $NICKNAME$"
+  werewolfculture_femalename:0 "$NAME_FEMALE$ $NICKNAME$"
+ werewolfculture:0 "Werewolf"
+ mageculture_malename:0 "$NAME_MALE$  $NICKNAME$"
+  mageculture_femalename:0 "$NAME_FEMALE$ $NICKNAME$"
+ ahlibatinculture_malename:0 "$NAME_MALE$  $NICKNAME$"
+  ahlibatinculture_femalename:0 "$NAME_FEMALE$ $NICKNAME$"
+ akashayanaculture_malename:0 "$NAME_MALE$  $NICKNAME$"
+  akashayanaculture_femalename:0 "$NAME_FEMALE$ $NICKNAME$"
+ chakravanticulture_malename:0 "$NAME_MALE$  $NICKNAME$"
+  chakravanticulture_femalename:0 "$NAME_FEMALE$ $NICKNAME$"
+ euthanatosculture_malename:0 "$NAME_MALE$  $NICKNAME$"
+ euthanatosculture_femalename:0 "$NAME_FEMALE$ $NICKNAME$"
+ celestialsingersculture_malename:0 "$NAME_MALE$  $NICKNAME$"
+  celestialsingersculture_femalename:0 "$NAME_FEMALE$ $NICKNAME$"
+ dreamspeakerculture_malename:0 "$NAME_MALE$  $NICKNAME$"
+  dreamspeakerculture_femalename:0 "$NAME_FEMALE$ $NICKNAME$"
+ cultofmercuryculture_malename:0 "$NAME_MALE$  $NICKNAME$"
+ cultofmercuryculture_femalename:0 "$NAME_FEMALE$ $NICKNAME$"
+ sahajiyaculture_malename:0 "$NAME_MALE$  $NICKNAME$"
+  sahajiyaculture_femalename:0 "$NAME_FEMALE$ $NICKNAME$"
+ daedelanculture_malename:0 "$NAME_MALE$  $NICKNAME$"
+  daedelanculture_femalename:0 "$NAME_FEMALE$ $NICKNAME$"
+ verbenaculture_malename:0 "$NAME_MALE$  $NICKNAME$"
+  verbenaculture_femalename:0 "$NAME_FEMALE$ $NICKNAME$"
+ nephandiculture_malename:0 "$NAME_MALE$  $NICKNAME$"
+  nephandiculture_femalename:0 "$NAME_FEMALE$ $NICKNAME$"
+ taftaniculture_malename:0 "$NAME_MALE$  $NICKNAME$"
+  taftaniculture_femalename:0 "$NAME_FEMALE$ $NICKNAME$"
+ sisterofhippolytaculture_malename:0 "$NAME_MALE$  $NICKNAME$"
+ sisterofhippolytaculture_femalename:0 "$NAME_FEMALE$ $NICKNAME$"
+ hemkasobkculture_malename:0 "$NAME_MALE$  $NICKNAME$"
+  hemkasobkculture_femalename:0 "$NAME_FEMALE$ $NICKNAME$"
+   ebonlegionculture_malename:0 "$NAME_MALE$  $NICKNAME$"
+  ebonlegionculture_femalename:0 "$NAME_FEMALE$ $NICKNAME$"
+ crimsomlegionculture_malename:0 "$NAME_MALE$  $NICKNAME$"
+  crimsomlegionculture_femalename:0 "$NAME_FEMALE$ $NICKNAME$"
+ ironlegionculture_malename:0 "$NAME_MALE$  $NICKNAME$"
+  ironlegion_femalename:0 "$NAME_FEMALE$ $NICKNAME$"
+ alabasterlegionculture_malename:0 "$NAME_MALE$  $NICKNAME$"
+ alabasterlegionculture_femalename:0 "$NAME_FEMALE$ $NICKNAME$"
+ silverlegionculture_malename:0 "$NAME_MALE$  $NICKNAME$"
+  silverlegionculture_femalename:0 "$NAME_FEMALE$ $NICKNAME$"
+  demonculture_malename:0 "$NAME_MALE$ $NICKNAME$"
+  demonculture_femalename:0 "$NAME_FEMALE$ $NICKNAME$"
