--- a/ancientblood/localization/english/AB_text_l_english.yml
+++ b/ancientblood/localization/english/AB_text_l_english.yml
@@ -1,8 +1,18 @@
 ﻿l_english:
  ######RELIGIONS######:0 ""
- vampire_sect:0 "Blood Gods"
- desc_vampire_sect:0 "Blood for the Blood Gods!  This is the religion of kindred of the kine who worship them."
- gaian_religion:0 "Gaia"
- desc_gaian_religion:0 "Werewolves and their Kinfolk worship Gaia through a variety of spirits, including the goddess Luna."
- aeduna_tradition:0 "Aeduna"
- aeduna_tradition_desc:0 "The Aeduna were the heirs of the Wyck, literally and figuratively, and wielded some of their skill in Awakened magic. But whereas the Wyck had been outsiders and travelers, the Aeduna were born among and lived with humans as healers, scribes, priests and priestesses, philosophers, and scholars. They grew in power and prominence Across the Mediterranean, spreading over time throughout Europe and parts of Asia. Many figures of myth are claimed to have been Aeduna, such Circe, Lilith, Medea, Merlin, Morgan le Fay, and perhaps some of the ancient gods."
+ vampirereligion:0 "Blood Cult"
+ desc_vampirereligion:0 "Vampire rule openly in this religion, making the pitiful mortals cower in fear and rightful awe."
+ masqueradereligion:0 "Vampire Masquerade"
+ desc_masqueradereligion:0 "Devious Cainites rule from the shadows, avoiding to draw too much attention from their rivals, or from angry mortals."
+  setitereligion:0 "Cult of Set"
+ desc_setitereligion:0 "The One true God is crushing his foes in Egypt. And soon, the whole world will bask in His glory."
+   magickreligion:0 "Magick"
+ desc_magickreligion:0 "The willworkers have power here, reality is fluid and mortals marvel at the wonder created by these godlike creatures."
+  rationalityreligion:0 "Rationality"
+ desc_rationalityreligion:0 "Philosophers, mathematicians and astromancers have shown the path to true Ascension to amazed mortals."
+  gaiareligion:0 "Gaia"
+ desc_gaiareligion:0 "The Earth Mother is well protected by her faithful guardians and their flock of devoted kin."
+   wyrmreligion:0 "Wyrm"
+ desc_wyrmreligion:0 "The Wyrm has corrupted many, and will corrupt even more. The Black Spiral awaits, ever looming closer to the world."
+   infernalreligion:0 "Infernal"
+ desc_infernalreligion:0 "As the Fallen Angels tighten their hold on the world, humanity grows ever closer to oblivion."
