--- a/ancientblood/localization/english/AB_traits_l_english.yml
+++ b/ancientblood/localization/english/AB_traits_l_english.yml
@@ -1,12 +1,12 @@
 ﻿l_english:
  vampire:0 "Vampire"
- vampire_desc:0 "One of the Kindred.  Undead."
+ vampire_desc:0 "One of the Kindred.  Undead"
  vampire_tooltip:0 "This option is available because your ruler is a #Y Vampire#!."
  brujah:0 "Brujah"
  brujah_desc:0 "The get of Troile, concentrated in Carthage."
  brujah_tooltip:0 "This option is available because your ruler is of the #Y Brujah#! clan."
  ventrue:0 "Ventrue"
- ventrue_desc:0 "The clan of Kings, who oddly rule a republican Eternal Senate in Rome."
+ ventrue_desc:0 "The clan of Kings, strong in Latin lands."
  ventrue_tooltip:0 "This option is available because your ruler is of the #Y Ventrue#! clan."
  elder:0 "Elder"
  elder_desc:0 "An vampire more than 200 years old."
@@ -18,7 +18,7 @@
  methuselah_desc:0 "A fourth or fifth Generation elder vampire who has existed for at least a millennium or more."
  methuselah_tooltip:0 "This option is available because your ruler is an #Y Methuselah#! vampire." 
  antediluvian:0 "Antediluvian"
- antediluvian_desc:0 "Vampires who existed before the Biblical Flood."
+ antediluvian_desc:0 "Vampires who existed before the Biblical Flood. One of the most horrific and powerful creature of the world."
  antediluvian_tooltip:0 "This option is available because your ruler is an #Y Antediluvian#! vampire."  
  generation6:0 "6th Generation"
  generation6_desc:0 "A vampire of the 6th generation descended from Cain."
@@ -41,13 +41,145 @@
  torpor:0 "Torpor"
  torpor_desc:0 "The long sleep of the undead. One night, they may awaken."
  torpor_tooltip:0 "This option is available because your ruler is in #Y torpor#!."
- werewolf:0 "Werewolf"
- werewolf_desc:0 "One fo the Garou. Shapeshifters that transform into wolves and the dreaded "Crinos" form-half man/half wolf but more dangerous than either."
- auspicetheurge:0 "Auspice: Theurge"
- auspicetheurge_desc:0 "Theurge is one of the five Auspices under which a Garou may be born. The sickle-shaped crescent moon grants the gift of insight. The Theurges are the mystics of the Garou, closer than any to the Umbra and its denizens."
- silverfang:0 "Silver Fang"
- silverfang_desc:0 "The 'Alpha Tribe' of the Garou Nation, the Silver Fangs are traditional rulers and war leaders. These noble Garou are known for their physical beauty, courage, and honor. Sadly, many younger members of the tribe suffer from odd quirks -- absent-mindedness, mild hallucinations, somnambulism -- nothing overtly psychotic, but noticeable nevertheless. The powerful history of the tribe lays a heavy burden on the shoulders of its members, and many are too proud to ask for help. The plight of the Silver Fangs epitomizes the tragedy of the Garou in general. Although proud and outwardly strong, the Fangs suffer from diseases of the spirit and mind."
+ generation7:0 "7th Generation"
+ generation7_desc:0 "A vampire of the 7th generation descended from Cain."
+ generation8:0 "8th Generation"
+ generation8_desc:0 "A vampire of the 8th generation descended from Cain."
+ generation9:0 "9th Generation"
+ generation9_desc:0 "A vampire of the 9th generation descended from Cain."
+ generation10:0 "10th Generation"
+ generation10_desc:0 "A vampire of the 10th generation descended from Cain."
+ generation11:0 "11th Generation"
+ generation11_desc:0 "A vampire of the 11th generation descended from Cain."
+ generation12:0 "12th Generation"
+ generation12_desc:0 "A vampire of the 125th generation descended from Cain."
+ baali:0 "Baali"
+ baali_desc:0 "The Corruptors and Infernalists have almost ended the world twice before. Oblivion is their goal, and is coming fast."
+ cappadocian:0 "Cappadocian"
+ cappadocian_desc:0 "Reclusive scholars and necromancers, a mysterious and elusive clan."
+ followerofset:0 "Follower of Set"
+ followerofset_desc:0 "Osiris is dead, Ra long gone, and the Werewolves on the run. The One True God smiles on His servants."
+ gangrel:0 "Gangrel"
+ gangrel_desc:0 "The savage leaders of the untamed lands wage a long war against Werewolves and even more fearsome creatures."
+ ishtarri:0 "Ishtarri"
+ ishtarri_desc:0 "Artists and philosophers following their progenitor exile into Greece after the fall of Sumer."
+ lasombra:0 "Lasombra"
+ lasombra_desc:0 "Lords of the night, this loosely organized clan is on the rise in Iberia."
+ salubri:0 "Salubri"
+ salubri_desc:0 "The powerful warriors and healers of Saulot are the vanguard of the world against the Infernal."
+ ravnos:0 "Ravnos"
+ ravnos_desc:0 "The clan of rulers is one of the major power of India, but his hegemony is contested by upstart mages."
+ tzimisce:0 "Tzimisce"
+ tzimisce_desc:0 "Deep in the mountains of Dacia resides clan Tzimisce, a reclusive conglomerate of feuding warlords and scholars."
+ haqimite:0 "Haqimite"
+ haqimite_desc:0 "The Judges lie divided between their alliance with Carthage and their traditional mission to purge the Infernal."
+ malkavian:0 "Malkavian"
+ malkavian_desc:0 "Seers and prophets, Malkavians are the true power behind many Kings of the Night."
+ nosferatu:0 "Nosferatu"
+ nosferatu_desc:0 "The unwanted progeny of Absimilliard hides in the shadow, fearful of the terrible wrath of their ancestor."
+ neonate:0 "Neonate"
+ neonate_desc:0 "A youngling, taking his first unsteady steps as a vampire."
+ ancilla:0 "Ancilla"
+ ancilla_desc:0 "A vampire having live long enough to prove that he can survive, probably, a little more."
+ generation13:0 "13th Generation"
+ generation13_desc:0 "A vampire of the 13th generation descended from Cain."
+ generation14:0 "14th Generation"
+ generation14_desc:0 "A vampire of the 14th generation descended from Cain."
+ generation15:0 "15th Generation"
+ generation15_desc:0 "A vampire of the 15th generation descended from Cain."
+ blackspiraldancer:0 "Black Spiral Dancer"
+ blackspiraldancer_desc:0 "Corrupted by the Wyrm, this werewolf is now hell bent on destroying everything he once hold dear."
+  blackfury:0 "Black Fury"
+ blackfury_desc:0 "The wrath of Gaia is a sight to behold when brought upon by the legendary Amazons."
+  silverfang:0 "Silver Fang"
+ silverfang_desc:0 "The rulers of the Garou nation have their claws all around the most powerful cities of the world."
+  warder:0 "Warder of Men"
+ warder_desc:0 "One of the only tribes to have refused the Impergium, these Garou trust in the inner potential of Humanity."
+  bonegnawer:0 "Bone Gnawer"
+ bonegnawer_desc:0 "Trusted friends of the Silent Striders, they were left alone when Egypt fell and are now scattered around the great sea."
+  silentstrider:0 "Silent Strider"
+ silentstrider_desc:0 "Their fight was legendary but their foe was a God. Exile has begun for the once proud rulers of Egypt."
+  shadowlord:0 "Shadow Lord"
+ shadowlord_desc:0 "The masters of the steppes are a conniving lot, well acquainted with all the true forms of power."
+  fianna:0 "Fianna"
+ fianna_desc:0 "Battle by battle, song by song, the Fianna are driving back the hated Fomorians from their celtic lands."
+  whitehowler:0 "White Howler"
+ whitehowler_desc:0 "The Children of Lion never back down from a challenge and are the fiercest foe of the Wyrm. For now."
+  getoffenris:0 "Get of Fenris"
+ getoffenris_desc:0 "The sons of the great wolf are defending their lands from the terrible Odin and the conniving Loki. They won't stop until victory is theirs."
+  childrenofgaia:0 "Child of Gaia"
+ childrenofgaia_desc:0 "The defenders of humanity have saved the weak humans from the claws of their brethrens and now look with pride upon the new marvels of the age."
+  redtalon:0 "Red Talons"
+ redtalon_desc:0 "For the true hunters, the Impergium has never stopped. Humanity must be culled before the Wyrm corrupts them all."
+  auspiceragabash:0 "Ragabash"
+ auspiceragabash_desc:0 "Garou born under the New Moon. Their role is the Trickster and Questioner of the Old-Ways. "
+  auspicetheurge:0 "Theurge"
+ auspicetheurge_desc:0 "Garou born under a crescent moon. They are Shamans, more in contact with the spiritual world, the Umbra and the spirits. "
+  auspiceahroun:0 "Ahroun"
+ auspiceahroun_desc:0 "The Full Moon represents the war aspect of Luna (the Moon) and these Garou are the most fierce Warriors. They usually step into leadership during war-time. "
+  auspicegalliard:0 "Galliard"
+ auspicegalliard_desc:0 "The ones who are born when the moon is Gibbous are the so-called Bards and Keepers of ancient Lore, who know of all the ancient legends and songs."
+  auspicephilodox:0 "Philodox"
+ auspicephilodox_desc:0 "The Half-Moon are Judges and Mediators in Garou society. They usually are the leaders in time of peace. "
+   nephandi:0 "Nephandi"
+ nephandi_desc:0 "Evil incarnate, these fallen mages only seek to plunge the world into a long, painful agony."
+   ahlibatin:0 "Ahl-I-Batin"
+ ahlibatin_desc:0 "Servants of Unity, this new group of mages rapidly expand his influence beyond its birthplace."
+    akashayana:0 "Akashayana"
+ akashayana_desc:0 "A long, bitter, war with the Chakravanti has hardened the soul of these asian willworkers."
+    euthanatos:0 "Euthanatos"
+ euthanatos_desc:0 "The various Greek death cults are an important, if often misunderstood, part of the Hellenic religion."
+    celestialsinger:0 "Celestial Singer"
+ celestialsinger_desc:0 "The One has many faces, but his song is only going to grow more powerful as times passes and people sing."
+    dreamspeaker:0 "Dreamspeaker"
+ dreamspeaker_desc:0 "Shamans and healers, each of them is a pillar of his community."
+    cultofmercury:0 "Cult of Mercury"
+ cultofmercury_desc:0 "Apprentices of the trickster god, these willworkers are a major, if divided, influence in Greece and beyond."
+    daedelan:0 "Daedelan"
+ daedelan_desc:0 "The rational thinkers are today's outcasts, and tomorrow humanity's greatest champions."
+    sahajiya:0 "Sahajiya"
+ sahajiya_desc:0 "Taking life to the extreme, these willworkers master pleasure and pain like no other."
+    chakravanti:0 "Chakravanti"
+ chakravanti_desc:0 "The death masters of India are slowly pushing back the invaders from beyond the Himalaya. But the cost in lives, and souls, was enormous."
+    verbena:0 "Verbena"
+ verbena_desc:0 "Druids and wise women are cornerstones of their communities, well versed in life and death."
+     taftani:0 "Taftani"
+ taftani_desc:0 "In the sands of the desert, majestic cities rise and fall at the will of these whimsical mages."
+      sisterofhippolyta:0 "Sister of Hippolyta"
+ sisterofhippolyta_desc:0 "Exiled by their warlikes sisters, these Amazons pride themselves in their healing and teaching arts."
+      hemkasobk:0 "Hem-Ka Sobk"
+ hemkasobk_desc:0 "This mysterious cult of the Crocodile wages a silent, and losing, war against the great Serpent himself."
  mage:0 "Mage"
- mage_desc:0 "One of the Awakened. An Avtar of Magick!"
- aeduna:0 "Aeduna"
- aeduna_desc:0 "The Aeduna were the heirs of the Wyck, literally and figuratively, and wielded some of their skill in Awakened magic. But whereas the Wyck had been outsiders and travelers, the Aeduna were born among and lived with humans as healers, scribes, priests and priestesses, philosophers, and scholars. They grew in power and prominence Across the Mediterranean, spreading over time throughout Europe and parts of Asia. Many figures of myth are claimed to have been Aeduna, such Circe, Lilith, Medea, Merlin, Morgan le Fay, and perhaps some of the ancient gods."
+ mage_desc:0 "A willworker, bending reality itself to his whims."
+ apprentice:0 "Apprentice"
+ apprentice_desc:0 "A willful mage starting his, hopefully, long journey towards Ascension."
+ adept:0 "Adept"
+ adept_desc:0 "Having survived the first steps of his learning curve, this mage knows quite a few tricks."
+  master:0 "Master"
+ master_desc:0 "An accomplished mage. A brillant teacher, charismatic ruler and relentless foe."
+  archmage:0 "Archmage"
+ archmage_desc:0 "Having forgotten Ascension for raw power, this being is now capable of bending entire nations to his allmighty will."
+  demon:0 "Demon"
+ demon_desc:0 "One of the rebellious Angel, free from his prison but not from his burning hatred for this world."
+  pawn:0 "Pawn"
+ pawn_desc:0 "A lowly member of the Legions of Hell, with low life expectancy."
+  baron:0 "Baron"
+ baron_desc:0 "A demonic pawn dominating, or manipulating, his brethren becomes a infernal baron."
+  marquis:0 "Marquis"
+ marquis_desc:0 "A powerful agent of Hell, expecting authority and obedience from his lessers."
+  duke:0 "Duke"
+ duke_desc:0 "Once a shining beacon of light and virtue in the Angelic hosts, this fiend is now one of the more dangerous blight upon the world."
+  archduke:0 "Archduke"
+ archduke_desc:0 "When the world ends, and the Silver City is reduced to rubble, the five Archdukes of Hell will finally stand triomphant over Creation once and for all."
+  ebonlegion:0 "Ebon Legion"
+ ebonlegion_desc:0 "Once brave angelic soldiers, now a barbaric host of gibbering monsters."
+  alabasterlegion:0 "Alabaster Legion"
+ alabasterlegion_desc:0 "Once wise angelic beings, now a ravening host of madmen."
+  ironlegion:0 "Iron Legion"
+ ironlegion_desc:0 "Once proud defenders of Heaven, now protecting torture chambers and sacrifice pits."
+  crimsomlegion:0 "Crimsom Legion"
+ crimsomlegion_desc:0 "Once friends of Humanity, now corruptors and defilers of everything pure and holy."
+  silverlegion:0 "Silver Legion"
+ silverlegion_desc:0 "Once philosophers and idealists, now burning with hatred for everything good and holy."
+   ennui:0 "Ennui"
+ ennui_desc:0 "This character can't be bothered with state matters anymore. It craves something else, something much deeper than mere politics."
