Cultures, religions and traits setup + Etruria testing grounds

--- a/ancientblood/localization/english/AB_traits_l_english.yml
+++ b/ancientblood/localization/english/AB_traits_l_english.yml
@@ -183,3 +183,5 @@
  silverlegion_desc:0 "Once philosophers and idealists, now burning with hatred for everything good and holy."
    ennui:0 "Ennui"
  ennui_desc:0 "This character can't be bothered with state matters anymore. It craves something else, something much deeper than mere politics."
+  werewolf:0 "Werewolf"
+ werewolf_desc:0 "A shapeshifter of one the Garou tribes."
